# Semester-Stats

./: .babelrc  .dockerignore  .eslintrc  .gitignore  .pre-commit-config.yaml  .python-version  404.html  CODE_OF_CONDUCT.md  Check.json  Dockerfile  LICENSE.md  MANIFEST.in  README.md  config.ini  demo.docx  docker-compose.yml  index.html  jest.config.ts  mkdocs.yml  package.json  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py  sitemap.xml  tox.ini  tsconfig.json  webpack.dev.config.js  webpack.prod.config.js
.github/workflows/: python-checkers.yml  python-style.yml
Algorithm/: index.html
Calculations/: index.html
Credit/: index.html
CsvFormat/: index.html
Database/: index.html
Dockerfile.config/: nginx.conf  supervisord.conf
FormattedData/: Data-CS-2016-2015-6.csv  Data-CS-2017-2017-5.csv
Links/: index.html
Resources/: TemplateDocument.docx
Scheme-2015/Detain/: index.html
api/: index.html
api-docs/batch/: index.html
api-docs/dept/: index.html
api-docs/student/: index.html
api-docs/subject/: index.html
csvData/: 14ec_multi.csv  15_cse_multi.csv  15ec_multi.csv  16_cse_multi.csv  16cs400_multi.csv  16ec400_multi.csv  16ec_multi.csv  17cs400_multi.csv  6th_sem_cse400.csv  Data-2017-2015-7.csv  ece.csv  ece2.csv  ece3.csv  ece_4th.csv  ece_4th_400.csv  filename.csv  tce.csv  tce_4th.csv
docs/: API.md  Algorithm.md  Calculations.md  Credit.md  CsvFormat.md  Database.md  Links.md  api.md  index.md
docs/Scheme-2015/: Detain.md
docs/api-docs/: batch.md  dept.md  student.md  subject.md
docs/v1/: api.md  dept.md
docs/v2/: batch.md  dept.md  document.md  home.md  info.md  structure.md  student.md  subject.md  summary.md
search/: search_index.json
semesterstat/: Config.py  __main__.py  config.py  generator.py  reciepts.py  reports.py
semesterstat/Database/: Models.py  __init__.py
semesterstat/InputModule/: StudentEntity.py
semesterstat/api/: batch.py  bulk.py  dept.py  document.py  exceptions.py  info.py  main.py  student.py  subject.py  summary.py
semesterstat/common/: __init__.py  extractor.py  generator.py  query.py  reciept.py  reciepts.py  reports.py  subject_extractor.py  usn_extractor.py
semesterstat/constants/: Departments.json  __init__.py  batch.py  dept.py
semesterstat/crud/: __init__.py  batch.py  bulk.py  common.py  dept.py  (+3 more)
semesterstats/: Logging.py  __init__.py  __main__.py  config.py
src/: Logging.py  main.py
test/: BaseForDB.py  test_InsertInterface.py  test_SelectPerformance.py  test_insertinterface.py
tests/: conftest.py  dbdata.py
(+254 files in other folders)
