[tool.poetry]
name = "semesterstats"
version = "0.2.0"
description = "A tool to calculate the semester statistics"
authors = ["Rushyanth111 <42034084+Rushyanth111@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.6,<3.9"
peewee = "^3.13.3"
docx-mailmerge = "^0.5.0"
uvicorn = "^0.11.5"
python-docx = "^0.8.10"
fastapi = "^0.54.2"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pep8-naming = "^0.10.0"
flake8 = "^3.8.1"
black = {version = "^19.10b0", allow-prereleases = true}
tox = "^3.15.0"
pex = "^2.1.10"
Faker = "^4.1.0"
rope = "^0.17.0"
mkdocs = "^1.1.2"
mkdocs-material = "^5.3.0"
make-deb = "^0.0.5"
wheel = "^0.34.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
