[tool.poetry]
name = "semesterstat"
version = "0.4.0"
description = "A tool to calculate the semester statistics"
authors = ["Rushyanth111 <42034084+Rushyanth111@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.6,<3.9"
docx-mailmerge = "^0.5.0"
uvicorn = "^0.11.5"
python-docx = "^0.8.10"
fastapi = "^0.54.2"
python-multipart = "^0.0.5"
aiofiles = "^0.5.0"
loguru = "^0.5.1"
SQLAlchemy = "^1.3.18"

[tool.poetry.dev-dependencies]
pep8-naming = "^0.11.1"
flake8 = "^3.8.1"
black = {version = "^19.10b0", allow-prereleases = true}
Faker = "^4.1.0"
rope = "^0.17.0"
mkdocs = "^1.1.2"
mkdocs-material = "^5.3.0"
wheel = "^0.34.2"
requests = "^2.24.0"
sqlalchemy-stubs = "^0.3"
isort = "^5.4.2"
pytest = "^6.0.1"
mccabe = "^0.6.1"
pytest-dependency = "^0.5.1"
mkdocstrings = "^0.13.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
