[tool.poetry]
name = "semesterstat"
version = "1.0.6"
description = "A tool to calculate the semester statistics"
authors = ["Rushyanth111 <42034084+Rushyanth111@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.6,<3.9"
docx-mailmerge = "^0.5.0"
uvicorn = "^0.12.1"
fastapi = "^0.60.0"
python-multipart = "^0.0.5"
aiofiles = "^0.5.0"
SQLAlchemy = "^1.3.18"

[tool.poetry.dev-dependencies]
pep8-naming = "^0.11.1"
flake8 = "^3.8.4"
black = "^20.8b1"
mkdocs = "^1.1.2"
mkdocs-material = "^5.3.0"
wheel = "^0.34.2"
requests = "^2.24.0"
sqlalchemy-stubs = "^0.3"
isort = "^5.5.4"
pytest = "^6.0.1"
mccabe = "^0.6.1"
mkdocstrings = "^0.13.1"
pytest-cov = "^2.10.1"
jsonschema = "^3.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
